<resources>
    <string name="app_name">AlgebraFinalApplication</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Select number matching the one above</string>
    <string name="next">(Tap to continue)</string>
    <string name="congratulation">Congratulations</string>
    <string name="newHighscore">You just set new higscore!</string>
    <string name="highscore">NEW HIGHSCORE: </string>
    <string name="score">Your score: </string>
    <string name="personalInfo">Name (age), gender</string>
    <string name="tvScore">Score</string>
    <string name="final_app">FINAL APP</string>
    <string name="welcome">Welcome</string>
    <string name="change_name">Change name</string>
    <string name="play">PLAY</string>
    <string name="insert_name">Insert name</string>
</resources>
